# LidarToolkit

./: .gitignore  CMakeLists.txt  README.md
NelderMead/: CMakeLists.txt
NelderMead/test/: RosenbrockTest.hpp
scripts/SphereCalibrationOctave/calibration/: Script3.m  SphereFitFixedRadius.m  buildDistanceNetwork.m  calculateResidus.m  createZF.m  createZFscript29.m  distanceNetworkRec.m  fiveSphereCalib.m  georef.m  getDCM.m  plot6GeorefSpheres.m  plot6Spheres.m  plotGeorefSpheres.m  plotSpheres.m  rangeAB.m  readLibacBinaryData.m  script104_105_106.m  sixSphereCalib.m  test.m  test2.m  test3.m  testDataNav.m  threeSphereCalib.m  twoSphereCalib.m  writeZF.m
scripts/SphereCalibrationOctave/q_104_105_106/passage_1/: sphere1  sphere1.txt  sphere2  sphere2.txt  sphere3  sphere3.txt  target1  target2  target3  target4  target5
scripts/SphereCalibrationOctave/q_104_105_106/passage_2/: sphere1  sphere1.txt  sphere2  sphere2.txt  sphere3  sphere3.txt  target1  target2  target3  target4  target5
scripts/SphereCalibrationOctave/q_25/passage_1/: sphere1  sphere2  target1
scripts/SphereCalibrationOctave/q_25/passage_2/: sphere1  sphere2  target1
scripts/SphereCalibrationOctave/q_26/passage_1/: sphere1
scripts/SphereCalibrationOctave/q_26/passage_2/: sphere1
src/: CalibrationConfiguration.hpp  GeneticFitter.hpp  Geodesy.hpp  SphereFitting.hpp  calibration.cpp  main.cpp
src/tools/: sphere-generator.py
test/: tests.cpp
test/data/: sphere1.txt  sphere2.txt
test/data/PortDeQuebec/Sphere1/: passage2.txt  passage_1.txt  passage_3.txt  passage_4.txt  passage_5.txt  passage_6.txt
test/data/PortDeQuebec/Sphere2/: passage_1.txt  passage_2.txt  passage_3.txt  passage_4.txt  passage_5.txt  passage_6.txt
